[tool.poetry]
name = "celeryMathGUI"
version = "0.1.5"
description = "A LaTex Equation OCR Tool Based on ConvNeXt and Transformer"
authors = ["rainyl <rainyliusy3@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.2"
Pillow = "^10.0.0"
onnxruntime = "^1.15.1"
tokenizers = "^0.13.3"
PySide6 = "^6.5.2"
pynput = "^1.7.6"
coloredlogs = "^15.0.1"
pyhotkey = {git = "https://github.com/rainyl/PyHotKey.git", rev = "3175397b290e140d671e13493493bde499e2ada0"}
onnxruntime-gpu = "^1.15.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
Nuitka = "^1.7.9"
black = "^23.7.0"
poethepoet = "^0.21.1"
py7zr = "^0.20.6"

[tool.poe.tasks]
build = """python ./build.py"""
build-debug = """python ./build.py --debug"""

[tool.ruff]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
